--- a/index.html
+++ b/index.html
@@ -1,6 +1,40 @@
 <!DOCTYPE html>
 <html>
 <body>
+
+<head>
+<link rel="stylesheet" type="text/css" href="firststyle.css" />
+</head>
+
+<body>
+<p style="text-align:center;">
+<img src="file:///Users/Jessica/Desktop/Backpacking/henrycoe.jpg" style="height: 100%" />
+</p>
+
 <h1>Jessica May</h1>
+</body>
+
+<ul class="tab">
+<li><a href="myfirst.html" target="_self" class="tablinks" onclick="openTab(event, 'Home')">Home</a></li>
+<li><a href="page2.html" target="_self" class="tablinks" onclick="openTab(event, 'About Me')">About Me</a></li>
+<li><a href="projectspage.html" target="_self" class="tablinks" onclick="openTab(event, 'Projects')">Projects</a></li>
+<li><a href="#" class="tablinks" onclick="openTab(event, 'Contact')">Contact</a></li>
+</ul>
+
+<div id="About Me" class="tabcontent">
+<h3>About Me</h3>
+<p>Welcome to my website.</p>
+</div>
+
+<div id="Projects" class="tabcontent">
+<h3>Projects</h3>
+<p>List of independent projects.</p>
+</div>
+
+<div id="Contact" class="tabcontent">
+<h3>Contact</h3>
+<p>How to get in touch with me.</p>
+</div>
+
 </body>
 <html>
