--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 </body>
 
 <ul class="tab">
-<li><a href="myfirst.html" target="_self" class="tablinks" onclick="openTab(event, 'Home')">Home</a></li>
-<li><a href="page2.html" target="_self" class="tablinks" onclick="openTab(event, 'About Me')">About Me</a></li>
+<li><a href="index.html" target="_self" class="tablinks" onclick="openTab(event, 'Home')">Home</a></li>
+<li><a href="aboutme.html" target="_self" class="tablinks" onclick="openTab(event, 'About Me')">About Me</a></li>
 <li><a href="projectspage.html" target="_self" class="tablinks" onclick="openTab(event, 'Projects')">Projects</a></li>
 <li><a href="#" class="tablinks" onclick="openTab(event, 'Contact')">Contact</a></li>
 </ul>
