--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
 <p style="text-align:center;">
-<img src="file:///Users/Jessica/Desktop/Backpacking/henrycoe.jpg" style="height: 100%" />
+<img src="file:///Users/Jessica/Desktop/Backpacking/henrycoe.JPG" style="height: 100%" />
 </p>
 
 <h1>Jessica May</h1>
