--- a/aboutme.html
+++ b/aboutme.html
@@ -21,7 +21,7 @@ Hello and welcome to my website! My name is Jessica May. I recently graduated in
 <ul class="tab">
 <li><a href="index.html" target="_self" class="tablinks" onclick="openTab(event, 'Home')">Home</a></li>
 <li><a href="aboutme.html" target="_self" class="tablinks" onclick="openTab(event, 'About Me')">About Me</a></li>
-<li><a href="projectspage.html" target="_self" class="tablinks" onclick="openTab(event, 'Projects')">Projects</a></li>
+<li><a href="project.html" target="_self" class="tablinks" onclick="openTab(event, 'Projects')">Projects</a></li>
 <li><a href="#" class="tablinks" onclick="openTab(event, 'Contact')">Contact</a></li>
 </ul>
 
