--- a/project.html
+++ b/project.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-<link rel="stylesheet" type="text/css" href="projectspage.css" .>
+<link rel="stylesheet" type="text/css" href="firststyle.css" .>
 </head>
 
 <h1>Independent Projects</h1>
