--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="device-container">
-                        <div class="device-mockup iphone6_plus portrait white">
+                        <div class="device-mockup nexus7 portrait">
                             <div class="device">
                                 <div class="screen">
                                     <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
@@ -117,32 +117,16 @@
                         <div class="row">
                             <div class="col-lg-6">
                                 <div class="feature-item">
-                                    <i class="icon-screen-smartphone text-primary"></i>
-                                    <h3>Device Mockups</h3>
-                                    <p class="text-muted">Ready to use HTML/CSS device mockups, no Photoshop required!</p>
+                                    <i class="icon-map text-primary"></i>
+                                    <h3>Specific to your route</h3>
+                                    <p class="text-muted">Plug in your start and end points and the weather is calculated along your route!</p>
                                 </div>
                             </div>
                             <div class="col-lg-6">
                                 <div class="feature-item">
-                                    <i class="icon-camera text-primary"></i>
-                                    <h3>Flexible Use</h3>
-                                    <p class="text-muted">Put an image, video, animation, or anything else in the screen!</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <div class="feature-item">
-                                    <i class="icon-present text-primary"></i>
-                                    <h3>Free to Use</h3>
-                                    <p class="text-muted">As always, this theme is free to download and use for any purpose!</p>
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="feature-item">
-                                    <i class="icon-lock-open text-primary"></i>
-                                    <h3>Open Source</h3>
-                                    <p class="text-muted">Since this theme is MIT licensed, you can use it commercially!</p>
+                                    <i class="icon-clock text-primary"></i>
+                                    <h3>Twice a day</h3>
+                                    <p class="text-muted">Find out in the morning what the weather will be like on the way to and from work.</p>
                                 </div>
                             </div>
                         </div>
